<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.narupley</groupId>
  <artifactId>not-going-to-be-commons-ssl</artifactId>
  <version>0.3.20-bcm3-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Not-Going-To-Be-Commons-SSL</name>
  <description>A Java 9+ compliant fork of Not-Yet-Commons-SSL</description>
  <url>https://github.com/vhbcm/not-going-to-be-commons-ssl</url>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Nick Rupley</name>
      <email>nick.rupley@gmail.com</email>
      <organization>narupley</organization>
      <organizationUrl>https://github.com/narupley</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/vhbcm/not-going-to-be-commons-ssl.git</connection>
    <developerConnection>scm:git:ssh://github.com:vhbcm/not-going-to-be-commons-ssl.git</developerConnection>
    <url>https://github.com/vhbcm/not-going-to-be-commons-ssl/tree/master</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.jar.name>not-going-to-be-commons-ssl</project.jar.name>
  </properties>
  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>${project.basedir}</directory>
        <includes>
          <include>LICENSE</include>
          <include>NOTICE</include>
        </includes>
        <targetPath>META-INF</targetPath>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <release>8</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.3</version>
        <configuration>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <finalName>${project.jar.name}-${project.version}</finalName>
          <archive>
            <manifestEntries>
              <Implementation-Title>${project.name}</Implementation-Title>
              <Implementation-URL>${project.url}</Implementation-URL>
              <Implementation-Version>${project.version}</Implementation-Version>
            </manifestEntries>          
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <finalName>${project.jar.name}-${project.version}</finalName>
          <archive>
            <manifestEntries>
              <Implementation-Title>${project.name}</Implementation-Title>
              <Implementation-URL>${project.url}</Implementation-URL>
              <Implementation-Version>${project.version}</Implementation-Version>
            </manifestEntries>          
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>
        <configuration>
          <finalName>${project.jar.name}-${project.version}</finalName>
          <archive>
            <manifestEntries>
              <Implementation-Title>${project.name}</Implementation-Title>
              <Implementation-URL>${project.url}</Implementation-URL>
              <Implementation-Version>${project.version}</Implementation-Version>
            </manifestEntries>          
          </archive>
          <failOnError>false</failOnError>
          <additionalDependencies>
            <additionalDependency>
              <groupId>org.bouncycastle</groupId>
              <artifactId>bcprov-jdk18on</artifactId>
              <version>1.81</version>
            </additionalDependency>
            <additionalDependency>
              <groupId>commons-httpclient</groupId>
              <artifactId>commons-httpclient</artifactId>
              <version>3.1</version>
            </additionalDependency>
            <additionalDependency>
              <groupId>commons-logging</groupId>
              <artifactId>commons-logging</artifactId>
              <version>1.3.5</version>
            </additionalDependency>
          </additionalDependencies>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <additionalparam>-Xdoclint:none</additionalparam>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- <plugin>
      	<groupId>net.ju-n.maven.plugins</groupId>
      	<artifactId>checksum-maven-plugin</artifactId>
      	<version>1.4</version>
      	<configuration>
      	  <fileSets>
      	    <fileSet>
      	      <directory>${project.build.directory}</directory>
      	      <include>${project.artifactId}-${project.version}.pom</include>
      	      <exclude>*.asc</exclude>
      	    </fileSet>
      	  </fileSets>
      	</configuration>
      	<executions>
      	  <execution>
      	    <goals>
      	      <goal>artifacts</goal>
      	    </goals>
      	  </execution>
      	</executions>
      </plugin> -->
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-gpg-plugin</artifactId>
      	<version>3.2.6</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      	<executions>
      	  <execution>
      	  	<id>sign-artifacts</id>
      	  	<phase>verify</phase>
      	  	<goals>
      	  	  <goal>sign</goal>
      	  	</goals>
      	  	<configuration>
      	  	  <gpgArguments>
      	  	  	<gpgArgument>--pinentry-mode</gpgArgument>
      	  	  	<gpgArgument>loopback</gpgArgument>
      	  	  </gpgArguments>
      	  	  <executable>${gpg.executable}</executable>
      	  	  <keyname>${gpg.keyname}</keyname>
      	  	  <passphrase>${gpg.passphrase}</passphrase>
      	  	  <passphraseServerId>${gpg.keyname}</passphraseServerId>
      	  	</configuration>
      	  </execution>
      	</executions>
      </plugin>
      <!-- plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.7</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <skipStagingRepositoryClose>true</skipStagingRepositoryClose>
        </configuration>
      </plugin -->
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>1.81</version>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.3.5</version>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy</artifactId>
      <version>1.8.17</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy-agent</artifactId>
      <version>1.8.17</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.21.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
      <version>3.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
